myK8S/semaphore/semaphore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:latest
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 3000
