myK8S/semaphore/semaphore-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore-postgres
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore-postgres
  template:
    metadata:
      labels:
        app: semaphore-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: semaphore-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-postgres
  namespace: infra
spec:
  selector:
    app: semaphore-postgres
  ports:
    - port: 5432
