myK8S/semaphore/semaphore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore-web
  namespace: infra
spec:
  selector:
    app: semaphore
  ports:
    - port: 3000
      targetPort: 3000
