myK8S/semaphore/semaphore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-cf
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ansible.${BASE_DOMAIN}
      secretName: semaphore-tls
  rules:
    - host: ansible.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore-web
                port:
                  number: 3000
